Minor style changes

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,8 @@
     <div id="info">
       <div><button id="clear">Reset points</button> <button id="sin">Fit sin()</button></div>
       <div id="plot"></div>
-      <div id="output">Please wait, downloading Wasm.</div>
+      <div class="small" id="output">Please wait, downloading Wasm.</div>
+      <div class="small right"><a href="https://github.com/georgestagg/interpolating-polynomials-wasm/">[Source]</a></div>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
